--- a/#sourse/scss/styles.scss
+++ b/#sourse/scss/styles.scss
@@ -61,5 +61,11 @@ html.light body {
 @import './family';
 @import './pricelist';
 @import './_gourmet';
+@import './bigbird';
+@import './image';
+@import './reservation';
+@import './pizza_icons';
+
+
 
 
