--- a/styles/slylessssss.css
+++ b/styles/slylessssss.css
@@ -576,7 +576,7 @@ html.light .item-gourmet__price {
     max-width: 346px;
 }
 
-html.dark .item-gourmet__text { <-----
+html.dark .item-gourmet__text {
     color: #FFDDC8;
 }
 
