--- a/#sourse/scss/styles.scss
+++ b/#sourse/scss/styles.scss
@@ -65,6 +65,8 @@ html.light body {
 @import './image';
 @import './reservation';
 @import './pizza_icons';
+@import './pizza_order';
+@import './popup';
 
 
 
