--- a/css/styles.css
+++ b/css/styles.css
@@ -898,3 +898,832 @@ html.light .booking-form_btn {
 }
 
 /* =========== PIZZA ICONS  ==========*/
+.pizza-icons__wrapper {
+  background-color: #212121;
+}
+
+html.dark pizza-icons__wrapper {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+html.dark .pizza-icons__logo-name {
+  color: #FF8C42;
+}
+html.light pizza-icons__wrapper {
+  background-color: #212121;
+}
+html.light .pizza-icons__logo-name {
+  color: #FF5B00;
+}
+
+.pizza-icons__header {
+  height: 129px;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 76px;
+}
+
+.pizza-icons__header-logo {
+  display: inline-block;
+  margin-top: 43px;
+}
+
+.pizza-icons__icons {
+  display: flex;
+}
+
+.icons-block__item {
+  margin-top: 53px;
+}
+.icons-block__item:not(:last-child) {
+  margin-right: 61px;
+}
+
+.icons-block__text {
+  font-family: "Quicksand", cursive;
+  font-size: 600;
+  font-size: 32px;
+  color: #FFFFFF;
+}
+
+/* =========== PIZZA ORDER  ==========*/
+.order__body {
+  background-image: url(../images/background__night/pizza-order/pictures/Pizza-slice.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: 100% 100%;
+  padding: 89px 0px 87px 95px;
+  display: flex;
+}
+
+.order__contact {
+  width: 55%;
+}
+
+.contact-data__account {
+  padding: 14px 0px 28px 55px;
+}
+
+.contact-data__info {
+  position: relative;
+}
+
+html.dark .contact-data__info {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+}
+html.dark .account__title {
+  color: rgba(255, 255, 255, 0.96);
+}
+html.dark .account__subtitle {
+  color: rgba(255, 255, 255, 0.96);
+}
+html.dark .account__btn-btn {
+  color: #FFFFFF;
+  border: 1px solid #FF8C42;
+}
+html.dark .account__btn-link {
+  color: #FF8C42;
+}
+html.dark .delivery__title {
+  color: #FFFFFF;
+}
+html.dark .payment__title {
+  color: #FFFFFF;
+}
+html.dark .order__bill-body {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+}
+html.dark .header-content__title {
+  color: #FFFFFF;
+}
+html.dark .header-content__subtitle {
+  color: #FFFFFF;
+}
+html.dark .bill-body__order-choice {
+  border-left: 3px solid #FF8C42;
+}
+html.dark .coupon-data__coupon-text {
+  color: #FF8C42;
+}
+html.dark .coupon-data__coupon-code {
+  color: #FFFFFF;
+  background-color: inherit;
+}
+html.dark .item-choosen__item-name {
+  color: #FF8C42;
+  background-color: inherit;
+}
+html.dark .item-choosen__customize-type {
+  color: #FFFFFF;
+}
+html.dark .item-choosen__sign {
+  color: #FF8C42;
+}
+html.dark .customize-pizza__select {
+  color: #FF8C42;
+}
+html.dark .quantity-selector__number {
+  color: #019310;
+}
+html.dark .addItems-btn {
+  color: #FFFFFF;
+  background-color: #FF8C42;
+}
+html.dark .reviewItems-btn {
+  color: #FFFFFF;
+  background-color: #FF8C42;
+}
+html.dark .clearItems-btn {
+  color: #FFFFFF;
+  background-color: #FF8C42;
+}
+html.dark .bill-details__header {
+  color: #FF8C42;
+}
+html.dark .bill-details__itemTotal {
+  color: #FFFFFF;
+}
+html.dark .itemTotal-info__text {
+  color: #FFFFFF;
+}
+html.dark .itemTotal-info__price {
+  color: #FFFFFF;
+}
+html.dark .fee-info__text {
+  color: #FFFFFF;
+}
+html.dark .fee-info__price {
+  color: #FFFFFF;
+}
+html.dark .fee-info__type {
+  color: #28F83D;
+}
+html.dark .bill-details__discount-line {
+  border: 2px solid #747474;
+}
+html.dark .discount-info__text {
+  color: #FFFFFF;
+}
+html.dark .discount-info__price {
+  color: #28F83D;
+}
+html.dark .taxes-info__text {
+  color: #FFFFFF;
+}
+html.dark .payment-info__text {
+  color: #F2F2F2;
+}
+html.dark .payment-info__price {
+  color: #FFFFFF;
+}
+html.light .contact-data__info {
+  border-radius: 10px;
+  background-color: rgba(217, 217, 217, 0.59);
+  box-shadow: 10px 19px 30px rgba(0, 0, 0, 0.25);
+}
+html.light .account__title {
+  color: #1E1E1E;
+}
+html.light .account__subtitle {
+  color: #1E1E1E;
+}
+html.light .account__btn-btn {
+  color: #1E1E1E;
+  border: 1px solid #FF5B00;
+}
+html.light .account__btn-link {
+  color: #FF5B00;
+}
+html.light .delivery__title {
+  color: #1E1E1E;
+}
+html.light .payment__title {
+  color: #1E1E1E;
+}
+html.light .order__bill-body {
+  background-color: rgba(217, 217, 217, 0.59);
+  border-radius: 10px;
+  box-shadow: 10px 19px 30px rgba(0, 0, 0, 0.25);
+}
+html.light .header-content__title {
+  color: #1E1E1E;
+}
+html.light .header-content__subtitle {
+  color: #1E1E1E;
+}
+html.light .bill-body__order-choice {
+  border-left: 3px solid #FF5B00;
+}
+html.light .coupon-data__coupon-text {
+  color: #FF5B00;
+}
+html.light .coupon-data__coupon-code {
+  color: #1E1E1E;
+  background-color: inherit;
+}
+html.light .item-choosen__item-name {
+  color: #FF5B00;
+  background-color: inherit;
+}
+html.light .item-choosen__customize-type {
+  color: #1E1E1E;
+}
+html.light .item-choosen__sign {
+  color: #FF5B00;
+}
+html.light .customize-pizza__select {
+  color: #FF5B00;
+}
+html.light .quantity-selector__number {
+  color: #3E5440;
+}
+html.light .addItems-btn {
+  color: #151515;
+  background-color: #FF5B00;
+}
+html.light .reviewItems-btn {
+  color: #151515;
+  background-color: #FF5B00;
+}
+html.light .clearItems-btn {
+  color: #151515;
+  background-color: #FF5B00;
+}
+html.light .bill-details__header {
+  color: #FF5B00;
+}
+html.light .bill-details__itemTotal {
+  color: #1E1E1E;
+}
+html.light .itemTotal-info__text {
+  color: #1E1E1E;
+}
+html.light .itemTotal-info__price {
+  color: #1E1E1E;
+}
+html.light .fee-info__text {
+  color: #1E1E1E;
+}
+html.light .fee-info__price {
+  color: 10E1E;
+}
+html.light .fee-info__type {
+  color: #026F0D;
+}
+html.light .bill-details__discount-line {
+  border: 1px solid rgba(0, 0, 0, 0.67);
+}
+html.light .discount-info__text {
+  color: #1E1E1E;
+}
+html.light .discount-info__price {
+  color: #026F0D;
+}
+html.light .taxes-info__text {
+  color: #1E1E1E;
+}
+html.light .payment-info__text {
+  color: #232323;
+}
+html.light .payment-info__price {
+  color: #1E1E1E;
+}
+
+.account {
+  margin-bottom: 90px;
+}
+
+.account__img-usersDark {
+  position: absolute;
+  top: 62px;
+  left: -50px;
+}
+
+.account__img-usersLight {
+  position: absolute;
+  top: 62px;
+  left: -50px;
+}
+
+.account__title {
+  font-size: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 60px;
+  margin-bottom: 7px;
+}
+
+.account__subtitle {
+  font-size: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 32px;
+}
+
+.account__btn {
+  font-family: "Quicksand", "cursive";
+  display: flex;
+  justify-content: space-between;
+  width: 315px;
+}
+
+.account__btn-btn {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  background-color: inherit;
+  display: block;
+  width: 142px;
+  padding: 4px 0px;
+  border-radius: 5px;
+}
+
+.account__btn-link {
+  text-decoration: underline;
+}
+
+.contact-data__delivery {
+  padding: 28px 0px 28px 55px;
+}
+
+.delivery {
+  margin-bottom: 90px;
+}
+
+.delivery__img-deliveryDark {
+  position: absolute;
+  top: 12px;
+  left: 0px;
+  left: -50px;
+}
+
+.delivery__img-deliveryLight {
+  position: absolute;
+  top: 12px;
+  left: 0px;
+  left: -50px;
+}
+
+.delivery__title {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+}
+
+.contact-data__payment {
+  padding: 28px 0px 28px 55px;
+}
+
+.payment__img-paymentDark {
+  position: absolute;
+  top: 12px;
+  left: -50px;
+}
+
+.payment__img-paymentLight {
+  position: absolute;
+  top: 12px;
+  left: -50px;
+}
+
+.payment__title {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+}
+
+.order__bill {
+  width: 45%;
+}
+
+.order__bill-body {
+  margin: 0px 0px 0px 100px;
+  width: 450px;
+}
+
+.bill-body {
+  padding: 25px 0px 121px 26px;
+}
+
+.bill-body__header {
+  display: flex;
+  margin-bottom: 54px;
+}
+
+.bill__header-content {
+  padding: 21px 0px 0px 15px;
+}
+
+.header-content__title {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  margin-bottom: 12px;
+}
+
+.header-content__subtitle {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.bill-body__order-choice {
+  padding-left: 11px;
+  margin-bottom: 69px;
+}
+
+.coupon-data {
+  margin-bottom: 27px;
+}
+
+.coupon-data__coupon-text {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.coupon-data__coupon-code {
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.order-choice__item {
+  margin-bottom: 28px;
+}
+
+.item-choosen__wrapper {
+  display: flex;
+}
+
+.customize {
+  font-family: "Quicksand", "cursive";
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 20px;
+}
+
+.item-choosen__item-name {
+  display: inline-block;
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+  margin: 0px 24px 0px 0px;
+  cursor: pointer;
+}
+
+.item-choosen__customize-type {
+  margin-left: 43px;
+  cursor: pointer;
+}
+
+.customize {
+  font-family: "Quicksand", "cursive";
+  font-weight: 600;
+  font-size: 10px;
+  display: inline-block;
+}
+
+.item-choosen__sign {
+  cursor: pointer;
+}
+
+.customize-pizza .hidden {
+  display: none;
+}
+
+.customize-pizza__select {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.order-choice__quantity-selector {
+  width: 97px;
+  height: 24px;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+.quantity-selector {
+  margin-right: 29px;
+}
+
+.quantity-selector__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quantity-selector__column:nth-child(1) {
+  width: 40%;
+}
+
+.quantity-selector__column:nth-child(2) {
+  padding: 0px 2px;
+  width: 20%;
+}
+
+.quantity-selector__column:nth-child(3) {
+  width: 40%;
+}
+
+.quantity-selector__minus {
+  display: inline-block;
+}
+
+.quantity-selector__plus {
+  display: inline-block;
+}
+
+.quantity-selector__number {
+  display: block;
+  text-align: center;
+  font-family: "Quicksand", "cursive";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.order-choice__price {
+  font-family: "Quicksand", "cursive";
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 13px;
+  color: #FF4141;
+  display: flex;
+  flex-direction: column;
+}
+
+.order-choice__price-total {
+  display: inline-block;
+  /* text-decoration: line-through; */
+}
+
+.order-choice__price-discount {
+  display: inline-block;
+}
+
+.bill-body__order {
+  /* display:inline-block; */
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-around;
+  /* margin-left: 78%; */
+}
+.bill-body__order button {
+  padding: 5px 10px;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.bill-body__messages {
+  font-family: "Quicksand", "cursive";
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  Opacity: 70%;
+  color: #F461A8;
+}
+
+.bill-details__header {
+  font-family: "Quicksand", "cursive";
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  Opacity: 70%;
+  margin-bottom: 39px;
+}
+
+.bill-details__itemTotal {
+  font-family: "Quicksand", "cursive";
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.itemTotal-info {
+  margin-bottom: 8px;
+}
+
+.itemTotal-info__text {
+  display: inline-block;
+  padding-right: 117px;
+}
+
+.itemTotal-info__price {
+  display: inline-block;
+}
+
+.bill-details__fee {
+  font-family: "Quicksand", "cursive";
+  font-weight: 500;
+}
+
+.fee-info {
+  margin-bottom: 24px;
+}
+
+.fee-info__text {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 15px;
+  padding-right: 51px;
+}
+
+.fee-info__price {
+  display: inline-block;
+  font-size: 8px;
+  line-height: 10px;
+  padding-right: 8px;
+}
+
+.fee-info__type {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.bill-details__discount-line {
+  margin-bottom: 22px;
+}
+
+.bill-details__line {
+  width: 226px;
+  height: 0px;
+  margin-left: 3px;
+}
+
+.bill-details__discount {
+  font-family: "Quicksand", "cursive";
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.discount-info {
+  margin-bottom: 24px;
+}
+
+.discount-info__text {
+  display: inline-block;
+  padding-right: 115px;
+}
+
+.discount-info__price {
+  display: inline-block;
+}
+
+.taxes-info {
+  font-family: "Quicksand", "cursive";
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  margin-bottom: 23px;
+}
+
+.taxes-info__text {
+  display: inline-block;
+  padding-right: 81px;
+}
+
+.taxes-info__price {
+  display: inline-block;
+  color: #000000;
+}
+
+.bill-details__payment-line {
+  border: 2px solid #000000;
+  margin-bottom: 8px;
+}
+
+.payment-info {
+  font-family: "Quicksand", "cursive";
+  font-weight: 500;
+}
+
+.payment-info__text {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 15px;
+  padding-right: 147px;
+}
+
+.payment-info__price {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/* ============ POPUP =============== */
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.8s ease 0s;
+}
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+.popup:target .popup__content {
+  transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  opacity: 1;
+}
+
+.popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+}
+
+.popup__body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 10px;
+}
+
+.popup__content {
+  background-color: #fff;
+  color: #000;
+  max-width: 800px;
+  padding: 30px;
+  position: relative;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+.popup__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  color: #000;
+  text-decoration: none;
+}
+
+.popup__title {
+  font-size: 40px;
+  margin: 0px 0px 1em 0px;
+}
+
+.popup__details {
+  display: flex;
+  align-items: flex-start;
+}
+.popup__details th {
+  background-color: burlywood;
+}
+.popup__details td:not(:first-child) {
+  text-align: right;
+}
+.popup__details button {
+  padding: 5px;
+  margin: 10px 0px 0px 20px;
+  background-color: #e6dcdc;
+  border-radius: 3px;
+  border: 1px solid black;
+  font-size: 14px;
+}
+
+.popup__details table, th, tr, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  font-size: 18px;
+}
+
+.popup__details tr, td {
+  background-color: lemonchiffon;
+}
+
+.popup__details th, tr, td {
+  padding: 5px;
+}
